--- a/error.html
+++ b/error.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Lista Del Compras</title>
+    <title>Lista Del Super</title>
 
     <!-- Color de la barra de navegación -->
     <meta name="theme-color" content="#ffffff">
@@ -33,21 +33,10 @@
 <body>
     
     <div class="container">
-        <div class="first-row">
-            <div class="first-column">
-                <h2>Comprar</h2>
-                <form class="inputs-cointaner">
-                    <input type="text" placeholder="Ejemplo: Dulce de leche">
-                </form>
-            </div>
-            <div class="second-column">
-                <h2>Lista</h2>
-                <ul class="list">
-                </ul>
-            </div>
+        <h1>
+            Error! página no encontrada
+        </h1>
     </div>
 
-    <script src="js/app.js"></script>
-    <script src="js/lista.js"></script>
 </body>
 </html>
