--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Lista Del Compras</title>
+    <title>Lista De Compras</title>
 
     <!-- Color de la barra de navegación -->
     <meta name="theme-color" content="#ffffff">
