--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="first-column">
                 <h2>Comprar</h2>
                 <form class="inputs-cointaner">
-                    <input type="text" placeholder="Ejemplo: Papas fritas">
+                    <input type="text" placeholder="Ejemplo: Dulce de leche">
                 </form>
             </div>
             <div class="second-column">
